# search-api-server

./: .gitignore  Cargo.toml  Llama-2-7b-chat-hf-Q5_K_M.gguf  README.md  all-MiniLM-L6-v2-ggml-model-f16.gguf
.github/workflows/: build.yml
src/: error.rs  google_search.rs  main.rs  search.rs  utils.rs
src/backend/: ggml.rs
src/search/: bing_search.rs  local_google_search.rs  mod.rs  tavily_search.rs
