[package]
name = "search-api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4.22", features = ["kv_serde", "std", "kv"] }
endpoints = { path = "../LlamaEdge/api-server/endpoints"}
llama-core = { path = "../LlamaEdge/api-server/llama-core", features = ["logging"] }
futures = { version = "0.3.6", default-features = false, features = ["async-await", "std"] }
either = "1.13.0"
thiserror = "1"
chat-prompts = { path = "../LlamaEdge/api-server/chat-prompts"}
hyper_wasi = { version = "0.15", features = ["full"] }
tokio_wasi = { version = "1", features = ["full"] }
once_cell = "1.18"
mime_guess = "2.0.4"
futures-util = "0.3"
anyhow = "1.0.80"
multipart-2021 = "0.19.0"
wasi-logger = "0.1.2"
walkdir = "2.5.0"
clap = "4.5.9"
serde_json = "1.0.120"
serde = "1.0.204"
uuid = "1.10.0"

[features]
default = ["rag"]
full = ["https"]
https = ["llama-core/https"]
rag = []
